# ecigs-vape_host

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
fe/: .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
fe/src/: App.tsx  main.tsx
fe/src/api/accounts/: index.ts  types.ts
fe/src/api/orders/: index.ts
fe/src/api/product-microservice/: index.ts  productData.json  types.ts
fe/src/common/: constants.ts  fetchJson.ts  routes.ts  useInit.ts  validate.ts
fe/src/common-ui/button/: Button.module.scss  Button.tsx
fe/src/common-ui/errorBoundary/: index.tsx
fe/src/common-ui/loader/: Loader.module.scss  Loader.tsx
fe/src/common-ui/notification/: Notification.module.scss  Notification.tsx  NotificationSlice.ts
fe/src/common-ui/select/: Select.module.scss  Select.tsx
fe/src/common-ui/text-field/: TextField.module.scss  TextField.tsx
fe/src/components/dropdown/: Dropdown.module.scss  Dropdown.tsx
fe/src/hooks/: reduxHook.ts
fe/src/store/: store.ts
fe/src/styles/: global.scss  variables.scss
src/apps/account/: __init__.py  admin.py  models.py  tasks.py  urls.py  views.py
src/apps/dumpdata/: test_date.json
src/apps/goods/: admin.py  models.py
src/apps/orders/: admin.py  models.py  signals.py  tasks.py
src/project/: ecigs_exceptions.py  urls.py
src/project/api/: urls.py
src/project/permissions_classes/: __init__.py  permissions_clases.py
src/project/settings/: additional.py  base.py  database.py  dbbackup.py  logging.py  regional.py  templates.py
(+53 files in other folders)
